Thu Mar 11 09:33:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          PPU 4.1.1 for PPC doesn't have atomic builtin support
          for datatypes of size 1 and 2

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
          Added defines to just disable short/unsigned short/bool specializations

        * tests/run_test.lst:
          Enable 2610 but mark it as not fixed

        * ace/Process_Manager.cpp:
          Layout change

        * ace/WIN32_Asynch_IO.cpp:
          Const changes

Wed Mar 10 10:31:16 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Svc_Handler.cpp:
        * tests/run_test.lst:
          Fixed bug#2609 and enabled the test for it. Thanks to Milan
          Cvetkovic <milan dot cvetkovic at mpathix dot com> for
          contributing this.

Tue Mar  9 12:20:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Added CXX_MACHINE

Mon Mar  8 15:36:55 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/mpc.pl:
        * bin/mwc.pl:

          Some platforms have been reported to return undef from
          $FindBin::RealBin.  In this case, fall back on dirname($0).

Mon Mar  8 13:53:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_GCC_T.inl:
          Fixed gcc warning

Mon Mar  8 08:35:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
          Added specializations for bool/unsigned short/short, is around 7 times
          faster than the default atomic op

Mon Mar  8 08:24:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Added tests for short/unsigned short/bool

Fri Mar  5 14:02:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Added test for GCC builtin support
